# Proyecto-1-Iteracion-2-Server

./: CMakeLists.txt
Client/: CMakeLists.txt  Client.cpp  main.cpp
Pointer/Single/: MPointer.cpp  MPointerGC.h
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Server/nlohmann/: adl_serializer.hpp  json.hpp
Server/nlohmann/detail/: json_pointer.hpp
Server/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
Server/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp
Server/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp
Server/nlohmann/detail/meta/: detected.hpp  is_sax.hpp  type_traits.hpp
Server/nlohmann/detail/output/: binary_writer.hpp  serializer.hpp
